--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  color: #353;
 }
 
 .app__navbar-links {
@@ -40,7 +41,7 @@
     }
 
     a {
-      color: var(--gray-color);
+      color: #353;
       text-decoration: none;
       flex-direction: column;
       text-transform: uppercase;
@@ -48,7 +49,7 @@
       transition: all 0.3s ease-in-out;
 
       &:hover {
-        color: red;
+        color: rgb(158, 28, 28);
       }
     }
   }
@@ -69,7 +70,7 @@
   }
 }
 
-.app__navbar-menu {
+#light .app__navbar-menu {
   width: 33px;
   height: 33px;
   border-radius: 50%;
@@ -77,7 +78,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: red;
+  background-color: #353;
 
   svg {
     width: 80%;
@@ -93,20 +94,26 @@
     right: 0;
     z-index: 5;
     padding: 1rem;
-    width: 70%;
+    width: 60%;
     height: 100vh;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
-    background-color: whitesmoke;
-    box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
+    background-color: white;
+    background-size: cover;
+    background-repeat: repeat;
+    box-shadow: 0 0 20px rgba(114, 114, 114, 0.245);
 
     svg {
       width: 33px;
       height: 33px;
-      color: red;
+      color: #353;
       margin: 0.5rem 1rem;
+
+      &:hover {
+        color: rgb(158, 28, 28);
+      }
     }
 
     ul {
@@ -125,7 +132,7 @@
       margin: 1rem;
 
       a {
-        color: black;
+        color: #353;
         text-decoration: none;
         font-size: 1rem;
         text-transform: uppercase;
@@ -133,8 +140,123 @@
         transition: all 0.3s ease-in-out;
 
         &:hover {
-          color: red;
+          color: rgb(158, 28, 28);
         }
+      }
+    }
+
+    .app__navbar-menu-theme-btn {
+      width: 24px;
+      height: 24px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      align-self: stretch;
+      cursor: pointer;
+      color: black;
+
+      &:hover {
+        color: black;
+      }
+    }
+  }
+
+  @media screen and (min-width: 900px) {
+    display: none;
+  }
+
+  @media screen and (min-width: 900px) {
+    display: none;
+  }
+}
+
+#dark .app__navbar-menu {
+  width: 33px;
+  height: 33px;
+  border-radius: 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #353;
+
+  svg {
+    width: 80%;
+    height: 80%;
+    color: black;
+    cursor: pointer;
+  }
+
+  div {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 5;
+    padding: 1rem;
+    width: 60%;
+    height: 100vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+    background-color: rgb(30, 30, 30);
+    background-size: cover;
+    background-repeat: repeat;
+    box-shadow: 0 0 20px rgba(153, 153, 153, 0.245);
+
+    svg {
+      width: 33px;
+      height: 33px;
+      color: #353;
+      margin: 0.5rem 1rem;
+
+      &:hover {
+        color: rgb(158, 28, 28);
+      }
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+    }
+
+    li {
+      margin: 1rem;
+
+      a {
+        color: #353;
+        text-decoration: none;
+        font-size: 1rem;
+        text-transform: uppercase;
+        font-weight: 500;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+          color: rgb(158, 28, 28);
+        }
+      }
+    }
+
+    .app__navbar-menu-theme-btn {
+      width: 24px;
+      height: 24px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      align-self: stretch;
+      cursor: pointer;
+      color: white;
+
+      &:hover {
+        color: white;
       }
     }
   }
