--- a/src/App.scss
+++ b/src/App.scss
@@ -1,48 +1,3 @@
-/*.app {
-  background-color: white;
-}
-
-.app__theme-light {
-  background-color: white;
-  color: black;
-}
-
-.app__theme-dark {
-  background-color: rgb(75, 75, 75);
-  color: rgb(255, 255, 255);
-}
-
-.app__container {
-  width: 100%;
-  min-height: 100vh;
-
-  display: flex;
-  flex-direction: row;
-}
-
-.app__flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.app__wrapper {
-  flex: 1;
-  width: 100%;
-  flex-direction: column;
-  padding: 4rem 2rem;
-}
-
-.p-text {
-  font-size: 0.8rem;
-  text-align: left;
-  color: var(--gray-color);
-  line-height: 1.5;
-
-  @media screen and (min-width: 2000px) {
-    font-size: 1.75rem;
-  }
-}*/
 .app {
   background-color: white;
   font-family: var(--font-base);
@@ -63,7 +18,7 @@
   align-items: center;
 }
 
-.app__wrapper {
+/*.app__wrapper {
   flex: 1;
   width: 100%;
   flex-direction: column;
@@ -72,7 +27,7 @@
   @media screen and (max-width: 450px) {
     padding: 4rem 1rem 2rem;
   }
-}
+}*/
 
 .header-text {
   font-size: 2.75rem;
