--- a/src/container/Home/Home.scss
+++ b/src/container/Home/Home.scss
@@ -1,13 +1,21 @@
+#home {
+  position: relative;
+  background: url("../../assets/artist.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+
+  // disable the default padding styles
+  .app__wrapper {
+    padding: 0;
+  }
+}
+
 .app__home {
   flex: 1;
   width: 100%;
   min-height: 100vh;
   flex-direction: row;
-
-  background: url("../../assets/artist.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: repeat;
 
   // disable the default padding styles
   .app__wrapper {
@@ -27,9 +35,43 @@
   }
 }
 
-.app__header-text {
-  font-size: 2.5rem;
+.app__home-info {
+  flex: 0.85;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  @media screen and (max-width: 1200px) {
+    flex: 0.5;
+    width: 100%;
+    margin-right: 0rem;
+  }
+}
+
+.app__home-title {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  font-size: 4rem;
   font-weight: 800;
-  text-align: center;
-  color: black;
+  color: rgb(0, 0, 0);
+
+  @media screen and (max-width: 1200px) {
+    width: 60%;
+    font-size: 3.5rem;
+  }
+}
+
+.app__home-text {
+  width: 50%;
+  font-size: 2rem;
+  font-weight: 400;
+  color: rgb(0, 0, 0);
+
+  @media screen and (max-width: 1200px) {
+    width: 75%;
+    font-size: 1.7rem;
+  }
 }
