--- a/src/App.scss
+++ b/src/App.scss
@@ -8,8 +8,8 @@
 }
 
 #dark {
-  background-color: rgb(75, 75, 75);
-  color: rgb(255, 255, 255);
+  background-color: rgb(60, 60, 60);
+  color: rgb(66, 127, 66);
 }
 
 .app__flex {
@@ -33,8 +33,8 @@
   font-size: 2.75rem;
   font-weight: 800;
   text-align: center;
-  color: var(--black-color);
   text-transform: capitalize;
+  padding-top: 75px;
 
   @media screen and (min-width: 2000px) {
     font-size: 4rem;
@@ -42,5 +42,16 @@
 
   @media screen and (max-width: 450px) {
     font-size: 2rem;
+  }
+}
+
+.p-text {
+  font-size: 0.8rem;
+  text-align: left;
+  color: #353;
+  line-height: 1.5;
+
+  @media screen and (min-width: 2000px) {
+    font-size: 1.75rem;
   }
 }
