--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,10 +1,10 @@
 .app__navbar {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 0.75rem 2rem;
-  background: rgba(255, 255, 255, 0.25);
+  background: rgba(198, 198, 198, 0.278);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.18);
@@ -17,6 +17,7 @@
   justify-content: flex-start;
   align-items: center;
   color: #353;
+  font-size: 1.2rem;
 }
 
 .app__navbar-links {
@@ -25,12 +26,13 @@
   justify-content: center;
   align-items: center;
   list-style: none;
-  margin-right: 5rem;
+  margin-right: 7.5rem;
 
   li {
-    margin: 0 1rem;
+    margin: 0 3rem;
     cursor: pointer;
     flex-direction: column;
+    font-size: 1rem;
 
     div {
       width: 5px;
@@ -59,10 +61,23 @@
   }
 }
 
-.app__navbar-theme-btn {
+#light .app__navbar-theme-btn {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  color: black;
+  cursor: pointer;
+
+  @media screen and (max-width: 900px) {
+    display: none;
+  }
+}
+
+#dark .app__navbar-theme-btn {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  color: white;
   cursor: pointer;
 
   @media screen and (max-width: 900px) {
