--- a/src/container/Gallery/Gallery.scss
+++ b/src/container/Gallery/Gallery.scss
@@ -1,20 +1,23 @@
+#gallery {
+  position: relative;
+}
 .app__gallery {
-  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 15px;
+  justify-content: space-evenly;
+  align-items: flex-start;
   width: 100%;
-  flex-direction: row;
+  min-height: 100vh;
 }
 
 .app__tattoo-img {
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 0.75rem 2rem;
+  margin: 5px;
 
   img {
-    width: 250px;
-    height: 300px;
-    border-radius: 0.5rem;
+    width: 300px;
+    height: 400px;
+    border-radius: 0.55rem;
     object-fit: cover;
   }
 
