--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,7 @@
 .app__navbar {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 0.75rem 2rem;
   background: rgba(198, 198, 198, 0.278);
@@ -9,7 +9,7 @@
   -webkit-backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   position: fixed;
-  z-index: 2;
+  z-index: 1;
 }
 
 .app__navbar-title {
@@ -107,10 +107,11 @@
     top: 0;
     bottom: 0;
     right: 0;
-    z-index: 5;
+    z-index: 2;
     padding: 1rem;
+    margin: -0.5rem -0.5rem 0 0;
     width: 60%;
-    height: 100vh;
+    height: 101vh;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -207,10 +208,11 @@
     top: 0;
     bottom: 0;
     right: 0;
-    z-index: 5;
+    z-index: 2;
     padding: 1rem;
+    margin: -0.5rem -0.5rem 0 0;
     width: 60%;
-    height: 100vh;
+    height: 101vh;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
