--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -5,9 +5,12 @@
 .app__contact {
   flex: 1;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  //flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  //justify-content: space-evenly;
+  //align-items: flex-start;
   width: 100%;
   min-height: 100vh;
 }
@@ -18,7 +21,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  margin: 2rem 0 0 0;
+  margin: 1.5rem 0 0 0;
 
   .app__contact-card {
     min-width: 290px;
@@ -53,7 +56,8 @@
     }
 
     @media screen and (max-width: 450px) {
-      width: 100%;
+      width: 90%;
+      justify-content: center;
     }
   }
 
@@ -74,17 +78,17 @@
 }
 
 .app__contact-form {
-  width: 60%;
+  width: 65%;
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
-  margin: 0 0 5rem 0;
+  margin: 0 0 8rem 0;
 
   div {
     width: 100%;
 
-    margin: 0.65rem 0;
+    margin: 1rem 0;
     border-radius: 10px;
     cursor: pointer;
     background-color: lightgray;
@@ -99,6 +103,7 @@
       border-radius: 7px;
 
       font: var(--font-base);
+      background-color: rgb(212, 212, 212);
       color: #353;
       outline: none;
     }
@@ -108,7 +113,7 @@
     }
 
     &:hover {
-      box-shadow: 0 0 25px #353;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.701);
     }
   }
 
@@ -129,11 +134,29 @@
 
     &:hover {
       background-color: rgb(42, 68, 42);
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.504);
     }
   }
 
   @media screen and (max-width: 768px) {
-    width: 100%;
-    margin: 1rem 0;
+    width: 95%;
+    margin: 0 0 6rem 0;
+  }
+}
+
+.app__form-sent-text {
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: center;
+  text-transform: capitalize;
+  margin: 10rem 0 0 0;
+
+  @media screen and (min-width: 2000px) {
+    font-size: 4rem;
+  }
+
+  @media screen and (max-width: 967px) {
+    font-size: 1.7rem;
+    margin: 4rem 0 0 0;
   }
 }
