--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,23 +4,39 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.75rem 2rem;
-  background: rgba(198, 198, 198, 0.278);
+  background: rgba(115, 115, 115, 0.262);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border: 1px solid rgba(79, 79, 79, 0.23);
   position: fixed;
   z-index: 1;
 }
 
-.app__navbar-title {
+#light .app__navbar-title {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   color: #353;
   font-size: 1.2rem;
+
+  @media screen and (min-width: 2000px) {
+    font-size: 1.6rem;
+  }
 }
 
-.app__navbar-links {
+#dark .app__navbar-title {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: var(--dark-text);
+  font-size: 1.2rem;
+
+  @media screen and (min-width: 2000px) {
+    font-size: 1.6rem;
+  }
+}
+
+#light .app__navbar-links {
   flex: 1;
   display: flex;
   justify-content: center;
@@ -47,12 +63,61 @@
       text-decoration: none;
       flex-direction: column;
       text-transform: uppercase;
-      font-weight: 500;
+      font-weight: 600;
       transition: all 0.3s ease-in-out;
 
       &:hover {
         color: rgb(158, 28, 28);
       }
+    }
+
+    @media screen and (min-width: 2000px) {
+      font-size: 1.2rem;
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    display: none;
+  }
+}
+
+#dark .app__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin-right: 7.5rem;
+
+  li {
+    margin: 0 3rem;
+    cursor: pointer;
+    flex-direction: column;
+    font-size: 1rem;
+
+    div {
+      width: 5px;
+      height: 5px;
+      background: transparent;
+      border-radius: 50%;
+      margin-bottom: 5px;
+    }
+
+    a {
+      color: var(--dark-text);
+      text-decoration: none;
+      flex-direction: column;
+      text-transform: uppercase;
+      font-weight: 600;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        color: var(--dark-hover);
+      }
+    }
+
+    @media screen and (min-width: 2000px) {
+      font-size: 1.2rem;
     }
   }
 
@@ -65,7 +130,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  color: black;
+  color: rgb(0, 0, 0);
   cursor: pointer;
 
   @media screen and (max-width: 900px) {
@@ -194,7 +259,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #353;
+  background-color: var(--dark-text);
 
   svg {
     width: 80%;
@@ -217,19 +282,19 @@
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
-    background-color: rgb(30, 30, 30);
+    background-color: rgb(34, 34, 34);
     background-size: cover;
     background-repeat: repeat;
-    box-shadow: 0 0 20px rgba(153, 153, 153, 0.245);
+    box-shadow: 0 0 20px rgba(79, 79, 79, 0.23);
 
     svg {
       width: 33px;
       height: 33px;
-      color: #353;
+      color: var(--dark-text);
       margin: 0.5rem 1rem;
 
       &:hover {
-        color: rgb(158, 28, 28);
+        color: var(--dark-hover);
       }
     }
 
@@ -249,7 +314,7 @@
       margin: 1rem;
 
       a {
-        color: #353;
+        color: var(--dark-text);
         text-decoration: none;
         font-size: 1rem;
         text-transform: uppercase;
@@ -257,7 +322,7 @@
         transition: all 0.3s ease-in-out;
 
         &:hover {
-          color: rgb(158, 28, 28);
+          color: var(--dark-hover);
         }
       }
     }
