--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ code {
 
 :root {
   --font-base: "Consolas", sans-serif;
+  --dark-text: rgb(73, 109, 73);
+  --dark-hover: rgb(98, 162, 98);
+  --light-text: rgb(51, 85, 51);
 }
 
 * {
